# cutils

./: .tokeignore  CMakeLists.txt  README.md  carray.html  cio.html  clist.html  index.html
.github/workflows/: publish_docs.yml
carray/: carray.c  carray.h  index.html
cio/: cio.c  cio.h  cioenum.h  index.html
clist/: CMakeLists.txt  clist.c  clist.h  index.html
docs/: CMakeLists.txt  carray.html  cio.html  clist.html  index.html
docs/carray/: index.html
docs/cio/: index.html
docs/clist/: index.html
docs/style/: global.css  header.css
docs/templates/: template_footer.html  template_head.html  template_header.html
style/: global.css  notes.css  responsive.css
tests/: CMakeLists.txt  eg_colours.cpp  eg_lists.cpp  eg_str_linked_list.cpp  unit_carray.cpp  unit_clist.cpp
